Резиновая вёрстка для устройств шириной tablet

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
                         <li class="menu-list-item">
                             <a href="#" class="nav-link">Контакты</a></li>
                     </ul>
-                </nav>  
+                </nav>
+                <div class="burger-menu">
+                    <div class="burger-item"></div>
+                    <div class="burger-item"></div>
+                    <div class="burger-item"></div>
+                  </div>  
             </div>
             <h1 class="caption">Блог о творчестве, спорте и образе жизни</h1>
         </div>
@@ -240,7 +245,7 @@
                 </div>
             </section>
             <section class="search">
-                <h3 class="_hidden">Поиск</h3>
+                <h3 class="elem_hidden">Поиск</h3>
                 <form class="search-form">
                     <input type="text" class="search-input" placeholder="Найти..." required>
                     <button type="submit" class="search-button"></button>
@@ -409,9 +414,9 @@
     <footer class="footer-section">
         <address class="social-media">
             <ul class="social-media-list">
-                <li><a href="dribbble" class="social-media-list-item dribbble-logo"><span class="_hidden">Dribbble</span></a></li>
-                <li><a href="pinterest" class="social-media-list-item pinterest-logo"><span class="_hidden">Pinterest</span></a></li>
-                <li><a href="tumblr" class="social-media-list-item tumblr-logo"><span class="_hidden">Tumblr</span></a></li>
+                <li><a href="dribbble" class="social-media-list-item dribbble-logo"><span class="elem_hidden">Dribbble</span></a></li>
+                <li><a href="pinterest" class="social-media-list-item pinterest-logo"><span class="elem_hidden">Pinterest</span></a></li>
+                <li><a href="tumblr" class="social-media-list-item tumblr-logo"><span class="elem_hidden">Tumblr</span></a></li>
             </ul>
         </address>
         <div class="copyright-info">
@@ -419,7 +424,7 @@
         </div>
     </footer>
     <!--Popup-->
-    <div class="popup popup_hidden">
+    <div class="popup _hidden">
         <form class="feedback-form">
             <h2 class="feedback-form-title">Ваш фидбек</h2>
             <label class="feedback-select">
